--- a/style/home.css
+++ b/style/home.css
@@ -26,6 +26,7 @@ nav ul li a {
     font-weight: bold;
     text-transform: uppercase;
     font-size: 1.3rem;
+    user-select: none;
 }
 
 .routes{
