--- a/style/payment.css
+++ b/style/payment.css
@@ -5,6 +5,10 @@ body {
     margin: 0;
     padding: 0;
     background-color: #fff;
+    height: 100vh; /* O corpo ocupa toda a altura da janela */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 nav {
@@ -13,8 +17,8 @@ nav {
     height: 70px;
     box-shadow: 0 4px 6px -2px rgba(0, 0, 0, 0.3);
     background-color: #fff;
-    width: 100%; /* Garante que a nav ocupe toda a largura */
-    position: relative; /* Para garantir que não afete o posicionamento dos elementos abaixo */
+    width: 100%;
+    position: relative;
 }
 
 nav ul {
@@ -31,29 +35,34 @@ nav ul li a {
 
 .wrapper {
     display: flex;
-    flex-direction: column; /* Coloca as divs uma em cima da outra */
-    align-items: center; /* Centraliza horizontalmente */
-    justify-content: center; /* Centraliza verticalmente, se o pai tiver altura definida */
-    margin: 20px 0; /* Espaçamento entre a nav e o conteúdo */
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 20px 0;
 }
 
 .container {
     max-width: 600px;
-    margin: 50px auto;
     padding: 20px;
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 h1 {
     text-align: center;
     margin-bottom: 20px;
-    color: #000; /* Cor do título */
+    color: #000;
 }
 
 .form-group {
     margin-bottom: 15px;
+    width: 100%;
 }
 
 label {
@@ -73,14 +82,14 @@ input[type="file"] {
 
 input[type="text"]:focus,
 input[type="number"]:focus {
-    border-color: #000; /* Cor ao focar no input */
+    border-color: #000;
     outline: none;
 }
 
 button {
     width: 100%;
     padding: 10px;
-    background-color: #000; /* Cor do botão */
+    background-color: #000;
     color: white;
     border: none;
     border-radius: 4px;
@@ -89,7 +98,7 @@ button {
 }
 
 button:hover {
-    background-color: #000; /* Cor do botão ao passar o mouse */
+    background-color: #333;
 }
 
 #message {
@@ -98,14 +107,14 @@ button:hover {
 }
 
 .popup {
-    display: flex; /* Escondido por padrão */
+    display: none;
     position: fixed;
     z-index: 1000;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7); /* Fundo semi-transparente */
+    background-color: rgba(0, 0, 0, 0.7);
     justify-content: center;
     align-items: center;
 }
@@ -125,4 +134,28 @@ button:hover {
     font-size: 28px;
     font-weight: bold;
     cursor: pointer;
+}
+
+.suggestions {
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    max-height: 150px;
+    max-width: 450px;
+    overflow-y: auto;
+    display: none;
+    position: absolute;
+    background-color: #fff;
+    z-index: 1000;
+    top: 60px;
+    left: 0;
+    right: 0;
+}
+
+.suggestion-item {
+    padding: 8px;
+    cursor: pointer;
+}
+
+.suggestion-item:hover {
+    background-color: #f0f0f0;
 }
