--- a/style/inscription.css
+++ b/style/inscription.css
@@ -91,7 +91,7 @@ nav ul li a {
 }
 
 .form-group {
-    display: flex;
+    display: relative;
     flex-direction: column;
 }
 
@@ -209,19 +209,15 @@ button {
     }
 }
 
-.suggestions {
+#suggestions {
+    display: none;
+    background-color: #fff;
     border: 1px solid #ccc;
     border-radius: 4px;
     max-height: 150px;
-    max-width: 450px;
     overflow-y: auto;
-    display: none;
-    position: absolute;
-    background-color: #fff;
     z-index: 1000;
-    top: 60px;
-    left: 0;
-    right: 0;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .suggestion-item {
@@ -248,7 +244,7 @@ button {
     margin-top: 20px;
 }
 
-.popup {
+.popup,.popupError {
     display: none;
     position: fixed;
     z-index: 1000;
@@ -261,7 +257,7 @@ button {
     align-items: center;
 }
 
-.popup-content {
+.popup-content,.popup-contentError {
     background-color: white;
     padding: 20px;
     border-radius: 5px;
@@ -270,12 +266,13 @@ button {
     user-select: none;
 }
 
-.close-btn {
+.close-btn,.close-btnError {
     color: red;
     float: right;
     font-size: 28px;
     font-weight: bold;
     cursor: pointer;
+    user-select: none;
 }
 
 .form-hospedagem {
