--- a/style/documentation.css
+++ b/style/documentation.css
@@ -13,13 +13,20 @@ nav {
     align-items: center;
     height: 70px;
     box-shadow: 0 4px 6px -2px rgba(0, 0, 0, 0.3);
-    background-color: #fff;
-    width: 100%; /* Garante que a nav ocupe toda a largura */
-    position: relative; /* Para garantir que não afete o posicionamento dos elementos abaixo */
+    background-color: #3c5672;;
+    width: 100%;
+    padding: 0 20px;
 }
 
 nav ul {
     list-style: none;
+    display: flex;
+    justify-content: center;
+    padding: 0;
+}
+
+nav ul li {
+    margin: 0 10px;
 }
 
 nav ul li a {
@@ -27,5 +34,6 @@ nav ul li a {
     font-weight: bold;
     text-transform: uppercase;
     font-size: 1.3rem;
-    color: #000;
+    color: #fff;
+    letter-spacing: 0.1em;
 }
