--- a/style/inscription.css
+++ b/style/inscription.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-body {
-    font-family: "Roboto", sans-serif;
+html, body {
     margin: 0;
     padding: 0;
-    background-color: #fff;
+    overflow-x: hidden; /* Adiciona isso para ocultar a rolagem horizontal */
+    font-family: "Roboto", sans-serif;
 }
 
 nav {
@@ -12,7 +12,7 @@ nav {
     align-items: center;
     height: 70px;
     box-shadow: 0 4px 6px -2px rgba(0, 0, 0, 0.3);
-    background-color: #3c5672;;
+    background-color: #3c5672;
     width: 100%;
     padding: 0 20px;
 }
@@ -42,8 +42,6 @@ nav ul li a {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 20px 0;
-    padding: 0 20px;
 }
 
 .container {
@@ -51,7 +49,7 @@ nav ul li a {
     align-items: center;
     margin-top: 10px;
     width: 100%;
-    max-width: 1100px;
+    max-width: 1000px;
     padding: 0 20px;
     flex-wrap: wrap; /* Permite que os itens se movam para a linha de baixo se necessário */
 }
@@ -346,4 +344,42 @@ button:hover {
 
 #lista-nomes-hospedagem li:hover .remove-nome {
     color: darkred;
-} 
+}
+
+.simple-loader {
+    position: fixed;
+    top: 45%;
+    left: 48%;
+    transform: translate(-50%, -50%);
+    width: 50px;
+    height: 50px;
+    border: 6px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 6px solid #3498db;
+    animation: spin 1s linear infinite;
+    z-index: 1001; /* Certifique-se que o loader esteja acima do fundo escuro */
+}
+
+/* Fundo escuro */
+.loader-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Cor preta com 50% de opacidade */
+    z-index: 1000; /* Abaixo do loader, mas acima de tudo */
+}
+
+/* Animação de rotação */
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+/* Para esconder o loader */
+.hidden {
+    display: none;
+}
+
+
