--- a/style/payment.css
+++ b/style/payment.css
@@ -135,6 +135,7 @@ button:hover {
     width: 90%; /* Largura responsiva */
     max-width: 400px; /* Limite máximo */
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    user-select: none;
 }
 
 .close-btn,.close-btnError {
@@ -142,6 +143,7 @@ button:hover {
     float: right;
     font-size: 28px;
     font-weight: bold;
+    user-select: none;
 }
 
 /* Sugestões */
@@ -178,4 +180,40 @@ button:hover {
     button {
         font-size: 14px; /* Reduz tamanho da fonte do botão */
     }
+}
+
+.simple-loader {
+    position: fixed;
+    top: 45%;
+    left: 48%;
+    transform: translate(-50%, -50%);
+    width: 50px;
+    height: 50px;
+    border: 6px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 6px solid #3498db;
+    animation: spin 1s linear infinite;
+    z-index: 1001; /* Certifique-se que o loader esteja acima do fundo escuro */
+}
+
+/* Fundo escuro */
+.loader-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Cor preta com 50% de opacidade */
+    z-index: 1000; /* Abaixo do loader, mas acima de tudo */
+}
+
+/* Animação de rotação */
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+/* Para esconder o loader */
+.hidden {
+    display: none;
 }
