--- a/style/inscription.css
+++ b/style/inscription.css
@@ -263,6 +263,7 @@ button:hover {
     max-width: 1100px;
     margin-top: -15px;
 }
+
 .form-participacao {
     align-items: center;
     justify-content: center;
@@ -271,7 +272,7 @@ button:hover {
     margin-top: 20px;
 }
 
-.popup,.popupError {
+.popup, .popupError {
     display: none;
     position: fixed;
     z-index: 1000;
@@ -284,16 +285,17 @@ button:hover {
     align-items: center;
 }
 
-.popup-content,.popup-contentError {
+.popup-content, .popup-contentError {
     background-color: white;
     padding: 20px;
     border-radius: 5px;
     text-align: center;
-    width: 300px;
+    width: 90%; /* Largura responsiva */
+    max-width: 400px; /* Limite máximo */
     user-select: none;
 }
 
-.close-btn,.close-btnError {
+.close-btn, .close-btnError {
     color: red;
     float: right;
     font-size: 28px;
@@ -304,7 +306,7 @@ button:hover {
 
 .form-hospedagem {
     margin-top: 30px;
-    width: 1100px;
+    width: 100%; /* Ajusta para 100% da largura */
 }
 
 .lista-nomes-container {
@@ -348,8 +350,8 @@ button:hover {
 
 .simple-loader {
     position: fixed;
-    top: 45%;
-    left: 48%;
+    top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
     width: 50px;
     height: 50px;
@@ -382,4 +384,10 @@ button:hover {
     display: none;
 }
 
-
+/* Adicionando regras para o loader e fundo em telas menores */
+@media (max-width: 480px) {
+    .simple-loader {
+        width: 40px; /* Diminuindo o tamanho do loader */
+        height: 40px;
+    }
+}
