--- a/style/documentation.css
+++ b/style/documentation.css
@@ -36,7 +36,7 @@ nav {
 nav ul {
     list-style: none;
     display: flex;
-    justify-content: center;
+    align-items: center;
     padding: 0;
     width: 100%; /* Certifique-se de que a lista ocupe toda a largura */
 }
