--- a/style/inscription.css
+++ b/style/inscription.css
@@ -407,3 +407,15 @@ span {
     width: 100%;
     max-width:1100px;
 }
+
+/* Para browsers WebKit (Chrome, Safari) */
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Para Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
+}
