--- a/style/dashboard.css
+++ b/style/dashboard.css
@@ -66,13 +66,13 @@ nav ul li a:hover {
 .card h2 {
     margin: 0 0 10px;
     font-size: 1.5em;
-    color: #2c3e50; /* Cor do título */
+    color: #425c77; /* Cor do título */
 }
 
 .card p {
-    margin: 5px 0;
+    margin: 3px 0;
     font-size: 1.2em; /* Tamanho da fonte diminuído para suavidade */
-    color: #555; /* Cor do texto mais suave */
+    color: #959595; /* Cor do texto mais suave */
     font-weight: bold;
     background-color: rgba(40, 167, 70, 0.1); /* Fundo suave */
     padding: 10px; /* Espaçamento interno */
@@ -159,8 +159,12 @@ table, th, td {
 th, td {
     padding: 12px; /* Aumenta o padding para mais conforto */
     text-align: left;
+    color: #080808;
 }
-
+td h2 {
+    font-size: 1.5em;
+    color: #2c3e50; /* Cor do título */
+}
 th {
     background-color: #3c5672; /* Cor do cabeçalho */
     color: white; /* Cor do texto do cabeçalho */
@@ -213,7 +217,7 @@ tr:hover {
 
 .list-card h2 {
     font-size: 1.5em;
-    color: #2c3e50; /* Cor do título */
+    color: #425c77; /* Cor do título */
 }
 
 .list-card table {
@@ -243,7 +247,7 @@ tr:hover {
 .card-title {
     font-size: 1.5em;
     margin-bottom: 12px;
-    color: #2c3e50; /* Cor do título */
+    color: #425c77; /* Cor do título */
 }
 
 .list {
@@ -383,3 +387,35 @@ nav.night-mode {
     background-color: #333; /* Cor de fundo no modo noturno */
     color: #fff; /* Cor do texto no modo noturno */
 }
+
+.loader-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999;
+}
+
+.loader {
+    border: 6px solid #f3f3f3;
+    border-top: 6px solid #3498db;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+}
+
+.hidden {
+    display: none;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
