--- a/style/dashboard.css
+++ b/style/dashboard.css
@@ -181,14 +181,14 @@ tr:hover {
 /* Botão circular */
 .details-btn {
     position: absolute;
-    bottom: 20px;
+    bottom: 30px;
     right: 20px;
-    background-color: #3498db; /* Cor de fundo do botão */
+    background-color: #2c3e50; /* Cor de fundo do botão */
     color: white; /* Cor do texto */
     border: none; /* Remove a borda padrão */
     border-radius: 50%; /* Faz o botão ser circular */
-    width: 40px;
-    height: 40px;
+    width: 20px;
+    height: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -335,7 +335,7 @@ table.night-mode td {
 
 /* Adicione isso aos seus botões */
 .details-btn.night-mode {
-    background-color: #3498db; /* Cor de fundo do botão */
+    background-color: #2c3e50; /* Cor de fundo do botão */
 }
 
 .details-btn.night-mode:hover {
@@ -418,4 +418,59 @@ nav.night-mode {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+.modal-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 10px;
+}
 
+.print-btn {
+    background-color: #3b913d61;
+    color: #2b2a2a;
+    border: none;
+    margin-left: auto;
+    border-radius: 5px;
+    font-size: 14px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    padding: 5px 10px;
+}
+
+.print-btn:hover {
+    background-color: #2e732e;
+}
+
+.print-btn:active {
+    background-color: #388e3c00; /* Cor de fundo ao clicar */
+    transform: translateY(1px); /* Efeito de "pressionar" */
+}
+.info-icon {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    font-size: 10px; /* tamanho de fonte reduzido */
+    color: #888; /* cor clara */
+    border: 1px solid #888;
+    border-radius: 50%;
+    width: 14px; /* largura reduzida */
+    height: 14px; /* altura reduzida */
+    text-align: center;
+    line-height: 14px; /* alinhamento do texto para o novo tamanho */
+    cursor: pointer;
+}
+
+/* Estilos para o tooltip */
+.info-icon:hover::after {
+    content: attr(data-tooltip);
+    position: absolute;
+    top: -10px;
+    right: 25px;
+    background-color: rgba(0, 0, 0, 0.75);
+    color: white;
+    padding: 4px 8px;
+    border-radius: 4px;
+    font-size: 12px;
+    white-space: nowrap;
+    z-index: 10;
+}
