--- a/style/payment.css
+++ b/style/payment.css
@@ -21,7 +21,7 @@ nav {
     height: 70px;
     box-shadow: 0 4px 6px -2px rgba(0, 0, 0, 0.3);
     background-color: #3c5672;;
-    width: 100%;
+    width: 100%; 
     padding: 0 20px;
 }
 
@@ -58,7 +58,7 @@ nav ul li a {
     border-radius: 8px; /* Bordas arredondadas */
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    width: 100%;
+    width: 350px;
     max-width: 600px; /* Largura máxima do formulário */
     position: relative; /* Para permitir que as sugestões sejam posicionadas */
 }
@@ -216,4 +216,54 @@ button:hover {
 /* Para esconder o loader */
 .hidden {
     display: none;
+}
+
+/* Estilo personalizado para o campo de arquivo */
+input[type="file"] {
+    display: none; /* Oculta o input de arquivo padrão */
+}
+
+.custom-file-upload {
+    display: inline-block;
+    width: 100%;
+    padding: 12px;
+    background-color: #007bff; /* Cor de fundo do botão */
+    color: white;
+    border: 1px solid #007bff; /* Cor da borda */
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    text-align: center;
+    transition: background-color 0.3s, box-shadow 0.3s; /* Transição para a sombra */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra para profundidade */
+}
+
+.custom-file-upload:hover {
+    background-color: #0056b3; /* Cor de destaque ao passar o mouse */
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3); /* Sombra mais intensa */
+}
+
+.custom-file-upload:active {
+    background-color: #004494; /* Cor ao clicar */
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2); /* Sombra mais leve ao clicar */
+}
+
+.file-name {
+    display: block;
+    font-size: 0.9rem;
+    color: #555;
+    margin-top: 5px;
+    text-align: center;
+}
+
+/* Remove as setas do input number em navegadores Webkit (Chrome, Safari) */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0; /* Remove a margem, se necessário */
+}
+
+/* Remove as setas do input number em Firefox */
+input[type="number"] {
+    -moz-appearance: textfield; /* Muda a aparência para um campo de texto, removendo as setas */
 }
