--- a/style/proofPayment.css
+++ b/style/proofPayment.css
@@ -142,6 +142,8 @@ nav .label {
     align-items: end;
     height: 100%;
     margin-bottom: 5px;
+    gap: 20px;
+    margin-left: 20px;
 }
 
 .search-locality {
@@ -157,10 +159,28 @@ nav .label {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra para dar profundidade */
 }
 
+.download-report {
+    width: 130px;
+    height: 40px;
+    background-color: #28a745;
+    color: #fff;
+    border-radius: 8px;
+    border: none; /* Removido o border, pode ser desnecessário */
+    font-size: 16px;
+    font-weight: 500;
+    transition: background-color 0.3s, box-shadow 0.3s; /* Adiciona transição para a sombra */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra para dar profundidade */
+};
+
 .search-locality:hover {
     background-color: #218838; /* Cor de destaque ao passar o mouse */
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3); /* Sombra mais intensa ao passar o mouse */
 }
+
+.download-report:hover {
+    background-color: #218838; /* Cor de destaque ao passar o mouse */
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3); /* Sombra mais intensa ao passar o mouse */
+};
 
 .label-locality {
     margin: 0 0 5px 5px;
@@ -175,6 +195,7 @@ nav .label {
     font-size: 16px;
     width: 450px;
     box-sizing: border-box;
+    text-transform: uppercase;
 }
 
 #input1::placeholder {
@@ -305,7 +326,7 @@ h1 {
 
 .locality-table {
     display: block;
-    width: 115%; /* Ou 50% no caso da .table-payments */
+    width: 100%; /* Ou 50% no caso da .table-payments */
     border-collapse: collapse;
     font-size: 1rem;
     text-align: left;
@@ -497,6 +518,7 @@ h1 {
     font-weight: bold;
 }
 
+/* Estilos para o container e prova de pagamento */
 .container-bottom {
     width: 100%;
     padding: 20px;
@@ -512,377 +534,125 @@ h1 {
     align-items: center;
     border: 2px solid #333;
     border-radius: 0.5rem;
-    overflow-x: auto; /* Permite a rolagem horizontal */
-    overflow-y: hidden; /* Impede a rolagem vertical */
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 
-.card {
-    --pink-500: #fda8ff;
-    --red-400: #f56767;
-    --sky-300: #bbefff;
-    --blue-500: #00a3fe;
-
-    cursor: pointer;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 0.75rem;
-    margin: 10px;
-
-    padding: 1rem;
-    width: 14rem; /* Largura fixa dos cards */
-    height: auto;
-    background-color: black;
-
-    border-radius: 0.5rem;
-}
-
-  
-.card .rectangle {
-    position: absolute;
-  
-    width: 0.925rem;
-    aspect-ratio: 1 / 1;
-    background-color: white;
-  
-    opacity: 0;
-    box-shadow: 0rem 0rem 0rem 0.175rem black;
-}
-.card:hover .rectangle {
-    opacity: 1;
-}
-  
-.card .rectangle.left-top {
-    top: -0.25rem;
-    left: -0.25rem;
-}
-
-.card .rectangle.right-top {
-    top: -0.25rem;
-    right: -0.25rem;
-}
-
-.card .rectangle.left-bottom {
-    bottom: -0.25rem;
-    left: -0.25rem;
-}
-
-.card .rectangle.right-bottom {
-    bottom: -0.25rem;
-    right: -0.25rem;
-  }
-  
-  .card .image {
-    position: relative;
-    z-index: 10;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  
-    padding: 0.25rem;
-    width: 100%;
-    height: 7.25rem;
-    background-color: #ccc;
-  
-    border-radius: 0.25rem;
-
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 
-                0 8px 16px rgba(0, 0, 0, 0.1);
-}
-
-.card .image img {
-    max-width: 100%; /* Garante que a largura máxima da imagem não exceda o contêiner */
-    max-height: 100%; /* Garante que a altura máxima da imagem não exceda o contêiner */
-    object-fit: contain; /* Mantém a proporção da imagem enquanto a ajusta ao contêiner */
-    border-radius: 0.25rem; /* Mantém o arredondamento consistente */
-}
-
-
-.card .title {
-    position: relative;
-    z-index: 10;
-  
-    font-size: 1.25rem;
-    color: white;
-    font-weight: bold;
-}
-
-.card .locality-name {
-    display: flex;
-    align-items: center;
-    gap: 0.375rem;
-  
-    font-size: 1rem;
-    font-weight: bold;
-    color: white;
-}
-
-.card .locality-name .svg {
-    width: 1.7rem;
-    fill: #fff;
-}
-  
-.card .love {
-    display: flex;
-    align-items: center;
-    gap: 0.375rem;
-  
-    font-size: 1rem;
-    font-weight: bold;
-    color: white;
-}
-  
-.card .love .svg {
-    width: 1.7rem;
-    fill: #fff;
-}
-  
-.card .category {
-    display: flex;
-    align-items: center;
-    gap: 0.375rem;
-}
-  
-.card .category .button {
-    cursor: pointer;
-  
-    padding: 0.25rem 0.5rem;
-    background-color: #d9d9d9;
-  
-    font-size: 0.5rem;
-    color: black;
-  
-    border: 2px solid transparent;
-    border-radius: 9999px;
-    transition: all 0.3s ease-in-out;
-}
-  .card .category .button:hover {
-    border: 2px solid var(--blue-500);
-}
-  
-.card .action {
-    padding-block: 0.375rem;
-    margin-top: 0.75rem;
-    background-color: transparent;
-    width: 150px;
-
-    font-size: 0.75rem;
-    font-weight: 700;
-    color: black;
-  
-    border: 2px solid transparent;
-    border-radius: 0.5rem;
-    transition: all 0.3s ease-in-out;
-}
-  
-  /* From Uiverse.io by Na3ar-17 */ 
-.container-download {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 50px;
-}
-/* From Uiverse.io by satyamchaudharydev */ 
-.button {
-    --width: 100px;
-    --height: 35px;
-    --tooltip-height: 35px;
-    --tooltip-width: 90px;
-    --gap-between-tooltip-to-button: 18px;
-    --button-color: #1163ff;
-    --tooltip-color: #fff;
-    width: var(--width);
-    height: var(--height);
-    background: var(--button-color);
-    position: relative;
+/* Estilos para cada comprovante */
+.comprovante {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    padding: 15px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    max-width: 250px;
+    margin-right: 20px;
+    margin-left: 20px;
     text-align: center;
-    border-radius: 0.45em;
-    font-family: "Arial";
-    transition: background 0.3s;
-  }
+}
 
-  
-  .button::before {
-    position: absolute;
-    content: attr(data-tooltip);
-    width: var(--tooltip-width);
-    height: var(--tooltip-height);
-    background-color: var(--tooltip-color);
-    font-size: 0.7rem;
-    color: #111;
-    border-radius: .25em;
-    line-height: var(--tooltip-height);
-    bottom: calc(var(--height) + var(--gap-between-tooltip-to-button) + 10px);
-    left: calc(50% - var(--tooltip-width) / 2);
-  }
-  
-  .button::after {
-    position: absolute;
-    content: '';
-    width: 0;
-    height: 0;
-    border: 10px solid transparent;
-    border-top-color: var(--tooltip-color);
-    left: calc(50% - 10px);
-    bottom: calc(100% + var(--gap-between-tooltip-to-button) - 10px);
-  }
-  
-  .button::after,.button::before {
-    opacity: 0;
-    visibility: hidden;
-    transition: all 0.5s;
-  }
-  
-  .text {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .button-wrapper,.text,.icon {
-    overflow: hidden;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    left: 0;
-    color: #fff;
-  }
-  
-  .text {
-    top: 0
-  }
-  
-  .text,.icon {
-    transition: top 0.5s;
-  }
-  
-  .icon {
-    color: #fff;
-    top: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .icon svg {
-    width: 24px;
-    height: 24px;
-  }
-  
-  .button:hover {
-    background: #6c18ff;
-  }
-  
-  .button:hover .text {
-    top: -100%;
-  }
-  
-  .button:hover .icon {
-    top: 0;
-  }
-  
-  .button:hover:before,.button:hover:after {
-    opacity: 1;
-    visibility: visible;
-  }
-  
-  .button:hover:after {
-    bottom: calc(var(--height) + var(--gap-between-tooltip-to-button) - 20px);
-  }
-  
-  .button:hover:before {
-    bottom: calc(var(--height) + var(--gap-between-tooltip-to-button));
-  }
-  
+/* Estilos para as imagens dentro de cada comprovante como miniaturas */
+.comprovante img {
+    width: 150px; /* Tamanho fixo da miniatura */
+    height: 100px; /* Tamanho fixo da miniatura */
+    object-fit: cover; /* Mantém a proporção sem distorcer */
+    border-radius: 5px;
+    cursor: pointer;
+    margin-bottom: 10px;
+}
 
-/* Estilo do Modal */
+/* Estilos para o modal */
 .modal {
     display: none;
     position: fixed;
-    z-index: 1000;
-    padding-top: 60px;
+    z-index: 9999;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.8);
+    padding-top: 60px;
 }
 
-/* Imagem ampliada */
 .modal-content {
     margin: auto;
     display: block;
     max-width: 80%;
     max-height: 80%;
-    border-radius: 10px;
-    user-select: none;
+    transition: transform 0.3s ease-in-out;
 }
 
-/* Texto de legenda */
-#caption {
-    margin: auto;
-    display: block;
-    text-align: center;
-    color: #ccc;
-    padding: 10px 20px;
-}
-
-/* Controles de zoom e botão de fechar */
-.modal-controls {
+/* Controles de zoom */
+.zoom-controls {
     position: absolute;
     top: 10px;
-    right: 10px;
+    left: 20px; /* Ajustando para a posição no canto esquerdo */
     display: flex;
-    align-items: center; /* Centraliza os itens verticalmente */
+    flex-direction: column; /* Empilhando os botões de cima para baixo */
     gap: 10px;
-    z-index: 2000;
+    z-index: 10;
 }
 
-.modal-controls button,
-.modal-controls .close {
-    background: rgba(255, 255, 255, 0.8);
+.zoom-button {
+    background-color: rgba(255, 255, 255, 0.7);
     border: none;
-    border-radius: 5px;
-    padding: 5px 10px;
-    font-size: 16px;
     cursor: pointer;
-    display: flex;
-    align-items: center; /* Centraliza o conteúdo dentro do botão */
-    justify-content: center;
+    font-size: 20px; /* Tamanho do ícone */
+    padding: 10px;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    text-align: center;
 }
 
-.modal-controls button:hover,
-.modal-controls .close:hover {
-    background: rgba(255, 255, 255, 1);
+.zoom-button:hover {
+    background-color: rgba(255, 255, 255, 1);
 }
 
-/* Ajuste específico para o botão de fechar */
-.modal-controls .close {
-    color: #000;
+/* Estilo para o botão de fechar */
+.close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #fff;
+    font-size: 40px;
     font-weight: bold;
-    font-size: 20px;
-    line-height: 20px;
-    padding: 5px 10px;
+    cursor: pointer;
 }
 
-/* Exibir o modal */
-.modal.hidden {
-    display: none;
+.close:hover,
+.close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
 }
 
-.modal:not(.hidden) {
-    display: block;
+
+/* Estilos da legenda da imagem */
+#caption {
+    margin-top: 15px;
+    color: white;
+    font-size: 18px;
 }
 
-.modal-content {
-    transition: transform 0.2s ease; /* Suaviza o zoom */
-    cursor: grab; /* Mostra um cursor de movimento */
+/* Estilos para o botão de download */
+.comprovante button {
+    margin-top: 10px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    border-radius: 5px;
+    width: 100%;
+    text-align: center;
+}
+
+/* Estilo para o botão de download quando o mouse passa por cima */
+.comprovante button:hover {
+    background-color: #45a049;
 }
 
 /* loader */
@@ -916,7 +686,6 @@ h1 {
     100% { transform: rotate(360deg); }
 }
 
-
 /* dark mode */
 body.dark-mode {
     background-color: #121212; /* Fundo principal escuro */
@@ -949,7 +718,6 @@ body.dark-mode .image {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 
                 0 6px 20px rgba(0, 0, 0, 0.19);
 }
-
 
 body.dark-mode .card span{
     color: #000;
