ajuste para o envio do token

--- a/style/verifyEmail.css
+++ b/style/verifyEmail.css
@@ -117,6 +117,8 @@ nav .label {
     padding: 30px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    min-width: 300px;  /* Largura mínima */
+    min-height: 200px; /* Altura mínima */
 }
 
 .loading {
